opam-version: "2.0"
maintainer: "dave@recoil.org"
authors: "David Scott"
license: "ISC"
tags: "org:mirage"
homepage: "https://github.com/mirage/mirage-block"
doc: "https://mirage.github.io/mirage-block/"
bug-reports: "https://github.com/mirage/mirage-block/issues"
depends: [
  "ocaml" {>= "4.06.0"}
  "dune" {>= "1.0"}
  "cstruct" {>= "6.0.0"}
  "lwt" {>= "4.0.0"}
  "logs"
  "mirage-block" {=version}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
]
dev-repo: "git+https://github.com/mirage/mirage-block.git"
synopsis: "Block signatures and implementations for MirageOS using Lwt"
description: """
This repo contains generic operations over Mirage `BLOCK` devices.
This package is specialised to the Lwt concurrency library for IO.
"""

