opam-version: "1.2"
maintainer: "dave@recoil.org"
authors: [ "David Scott" ]
license: "ISC"
homepage: "https://github.com/mirage/mirage-block"
dev-repo: "https://github.com/mirage/mirage-block.git"
bug-reports: "https://github.com/mirage/mirage-block/issues"
doc: "https://mirage.github.io/mirage-block/"

build: [
  [ "jbuilder" "subst"] {pinned}
  [ "jbuilder" "build" "-p" name "-j" jobs ]
]

depends: [
  "jbuilder"  {build & >="1.0+beta9"}
  "cstruct" {>= "2.0.0"}
  "io-page"
  "lwt"
  "logs"
  "mirage-block" {>= "1.0.0"}
]

available: [ocaml-version >= "4.04.2"]
tags: "org:mirage"
